// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`labelLayout 1`] = `
{
  "annotation": {},
  "chartType": "pie",
  "config": {
    "pie": {
      "backgroundColor": "transparent",
      "color": {
        "colorScheme": [
          "#8D72F6",
          "#5766EC",
          "#66A3FE",
          "#51D5E6",
          "#4EC0B3",
          "#F9DF90",
          "#F9AD71",
          "#ED8888",
          "#E9A0C3",
          "#D77DD3",
        ],
        "linearColorScheme": [
          "#C2CEFF",
          "#5766EC",
        ],
      },
      "label": {
        "enable": true,
        "labelColorSmartInvert": false,
        "labelLayout": "edge",
        "labelOverlap": true,
        "showValue": true,
        "showValuePercent": true,
        "wrap": true,
      },
      "legend": {
        "border": true,
        "enable": true,
        "labelColor": "#646A73",
        "labelFontSize": 12,
        "labelFontWeight": 400,
        "maxSize": 1,
        "position": "rt",
        "shapeType": "rectRound",
      },
      "tooltip": {
        "enable": true,
      },
    },
  },
  "customTheme": {
    "config": {
      "pie": {
        "backgroundColor": "transparent",
        "color": {
          "colorScheme": [
            "#8D72F6",
            "#5766EC",
            "#66A3FE",
            "#51D5E6",
            "#4EC0B3",
            "#F9DF90",
            "#F9AD71",
            "#ED8888",
            "#E9A0C3",
            "#D77DD3",
          ],
          "linearColorScheme": [
            "#C2CEFF",
            "#5766EC",
          ],
        },
        "label": {
          "enable": true,
          "labelColorSmartInvert": false,
          "labelLayout": "labelLine",
          "labelOverlap": true,
          "showValue": true,
          "showValuePercent": true,
          "wrap": true,
        },
        "legend": {
          "border": true,
          "enable": true,
          "labelColor": "#646A73",
          "labelFontSize": 12,
          "labelFontWeight": 400,
          "maxSize": 1,
          "position": "rt",
          "shapeType": "rectRound",
        },
        "tooltip": {
          "enable": true,
        },
      },
    },
  },
  "dataset": [
    {
      "__Dim_ColorId__": "2019-profit-profit",
      "__Dim_Color__": "2019-profit",
      "__Dim_Detail__": "2019-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 10,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019",
      "profit": 10,
    },
    {
      "__Dim_ColorId__": "2019-sales-sales",
      "__Dim_Color__": "2019-sales",
      "__Dim_Detail__": "2019-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 20,
      "__OriginalData__": {
        "date": "2019",
        "profit": 10,
        "sales": 20,
      },
      "date": "2019",
      "sales": 20,
    },
    {
      "__Dim_ColorId__": "2020-profit-profit",
      "__Dim_Color__": "2020-profit",
      "__Dim_Detail__": "2020-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 60,
      },
      "date": "2020",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "2020-sales-sales",
      "__Dim_Color__": "2020-sales",
      "__Dim_Detail__": "2020-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2020",
        "profit": 30,
        "sales": 60,
      },
      "date": "2020",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "2021-profit-profit",
      "__Dim_Color__": "2021-profit",
      "__Dim_Detail__": "2021-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 30,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 60,
      },
      "date": "2021",
      "profit": 30,
    },
    {
      "__Dim_ColorId__": "2021-sales-sales",
      "__Dim_Color__": "2021-sales",
      "__Dim_Detail__": "2021-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 60,
      "__OriginalData__": {
        "date": "2021",
        "profit": 30,
        "sales": 60,
      },
      "date": "2021",
      "sales": 60,
    },
    {
      "__Dim_ColorId__": "2022-profit-profit",
      "__Dim_Color__": "2022-profit",
      "__Dim_Detail__": "2022-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 50,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
      },
      "date": "2022",
      "profit": 50,
    },
    {
      "__Dim_ColorId__": "2022-sales-sales",
      "__Dim_Color__": "2022-sales",
      "__Dim_Detail__": "2022-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 100,
      "__OriginalData__": {
        "date": "2022",
        "profit": 50,
        "sales": 100,
      },
      "date": "2022",
      "sales": 100,
    },
    {
      "__Dim_ColorId__": "2023-profit-profit",
      "__Dim_Color__": "2023-profit",
      "__Dim_Detail__": "2023-profit",
      "__MeaId__": "profit",
      "__MeaName__": "profit",
      "__MeaValue__": 40,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 80,
      },
      "date": "2023",
      "profit": 40,
    },
    {
      "__Dim_ColorId__": "2023-sales-sales",
      "__Dim_Color__": "2023-sales",
      "__Dim_Detail__": "2023-sales",
      "__MeaId__": "sales",
      "__MeaName__": "sales",
      "__MeaValue__": 80,
      "__OriginalData__": {
        "date": "2023",
        "profit": 40,
        "sales": 80,
      },
      "date": "2023",
      "sales": 80,
    },
  ],
  "datasetReshapeInfo": [
    {
      "foldInfo": {
        "foldMap": {
          "profit": "profit",
          "sales": "sales",
        },
        "measureId": "__MeaId__",
        "measureName": "__MeaName__",
        "measureValue": "__MeaValue__",
        "statistics": {
          "colorMax": -Infinity,
          "colorMin": Infinity,
          "count": 10,
          "max": 100,
          "min": 10,
          "sum": 480,
        },
      },
      "id": "pie",
      "index": 0,
      "unfoldInfo": {
        "colorIdMap": {
          "2019-profit-profit": "2019-profit",
          "2019-sales-sales": "2019-sales",
          "2020-profit-profit": "2020-profit",
          "2020-sales-sales": "2020-sales",
          "2021-profit-profit": "2021-profit",
          "2021-sales-sales": "2021-sales",
          "2022-profit-profit": "2022-profit",
          "2022-sales-sales": "2022-sales",
          "2023-profit-profit": "2023-profit",
          "2023-sales-sales": "2023-sales",
        },
        "colorItems": [
          "2019-profit-profit",
          "2019-sales-sales",
          "2020-profit-profit",
          "2020-sales-sales",
          "2021-profit-profit",
          "2021-sales-sales",
          "2022-profit-profit",
          "2022-sales-sales",
          "2023-profit-profit",
          "2023-sales-sales",
        ],
        "encodingAngle": "__Dim_Angle__",
        "encodingColor": "__Dim_Color__",
        "encodingColorId": "__Dim_ColorId__",
        "encodingDetail": "__Dim_Detail__",
        "encodingX": "__Dim_X__",
        "encodingY": "__Dim_Y__",
      },
    },
  ],
  "dimensions": [
    {
      "alias": "date",
      "id": "date",
    },
    {
      "alias": "指标名称",
      "id": "__MeaName__",
    },
  ],
  "encoding": {
    "angle": [
      "profit",
      "sales",
    ],
    "color": [
      "date",
      "__MeaName__",
    ],
    "column": [],
    "detail": [
      "date",
      "__MeaName__",
    ],
    "label": [],
    "row": [],
    "tooltip": [
      "date",
    ],
  },
  "locale": "zh-CN",
  "measures": [
    {
      "alias": "profit",
      "id": "profit",
    },
    {
      "alias": "sales",
      "id": "sales",
    },
  ],
}
`;

exports[`labelLayout 2`] = `
{
  "animation": true,
  "background": "transparent",
  "categoryField": "__Dim_ColorId__",
  "color": {
    "domain": [
      "2019-profit-profit",
      "2019-sales-sales",
      "2020-profit-profit",
      "2020-sales-sales",
      "2021-profit-profit",
      "2021-sales-sales",
      "2022-profit-profit",
      "2022-sales-sales",
      "2023-profit-profit",
      "2023-sales-sales",
    ],
    "range": [
      "#8D72F6",
      "#5766EC",
      "#66A3FE",
      "#51D5E6",
      "#4EC0B3",
      "#F9DF90",
      "#F9AD71",
      "#ED8888",
      "#E9A0C3",
      "#D77DD3",
    ],
    "specified": undefined,
    "type": "ordinal",
  },
  "data": {
    "fields": {
      "__Dim_Angle__": {
        "sortIndex": 0,
      },
      "__Dim_ColorId__": {
        "sortIndex": 0,
      },
      "__Dim_X__": {
        "sortIndex": 0,
      },
    },
    "id": "pie",
    "values": [
      {
        "__Dim_ColorId__": "2019-profit-profit",
        "__Dim_Color__": "2019-profit",
        "__Dim_Detail__": "2019-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 10,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019",
        "profit": 10,
      },
      {
        "__Dim_ColorId__": "2019-sales-sales",
        "__Dim_Color__": "2019-sales",
        "__Dim_Detail__": "2019-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 20,
        "__OriginalData__": {
          "date": "2019",
          "profit": 10,
          "sales": 20,
        },
        "date": "2019",
        "sales": 20,
      },
      {
        "__Dim_ColorId__": "2020-profit-profit",
        "__Dim_Color__": "2020-profit",
        "__Dim_Detail__": "2020-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 60,
        },
        "date": "2020",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "2020-sales-sales",
        "__Dim_Color__": "2020-sales",
        "__Dim_Detail__": "2020-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2020",
          "profit": 30,
          "sales": 60,
        },
        "date": "2020",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "2021-profit-profit",
        "__Dim_Color__": "2021-profit",
        "__Dim_Detail__": "2021-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 30,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 60,
        },
        "date": "2021",
        "profit": 30,
      },
      {
        "__Dim_ColorId__": "2021-sales-sales",
        "__Dim_Color__": "2021-sales",
        "__Dim_Detail__": "2021-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 60,
        "__OriginalData__": {
          "date": "2021",
          "profit": 30,
          "sales": 60,
        },
        "date": "2021",
        "sales": 60,
      },
      {
        "__Dim_ColorId__": "2022-profit-profit",
        "__Dim_Color__": "2022-profit",
        "__Dim_Detail__": "2022-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 50,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
        },
        "date": "2022",
        "profit": 50,
      },
      {
        "__Dim_ColorId__": "2022-sales-sales",
        "__Dim_Color__": "2022-sales",
        "__Dim_Detail__": "2022-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 100,
        "__OriginalData__": {
          "date": "2022",
          "profit": 50,
          "sales": 100,
        },
        "date": "2022",
        "sales": 100,
      },
      {
        "__Dim_ColorId__": "2023-profit-profit",
        "__Dim_Color__": "2023-profit",
        "__Dim_Detail__": "2023-profit",
        "__MeaId__": "profit",
        "__MeaName__": "profit",
        "__MeaValue__": 40,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 80,
        },
        "date": "2023",
        "profit": 40,
      },
      {
        "__Dim_ColorId__": "2023-sales-sales",
        "__Dim_Color__": "2023-sales",
        "__Dim_Detail__": "2023-sales",
        "__MeaId__": "sales",
        "__MeaName__": "sales",
        "__MeaValue__": 80,
        "__OriginalData__": {
          "date": "2023",
          "profit": 40,
          "sales": 80,
        },
        "date": "2023",
        "sales": 80,
      },
    ],
  },
  "innerRadius": 0,
  "label": {
    "formatMethod": [Function],
    "layout": {
      "align": "edge",
    },
    "overlap": {
      "clampForce": true,
      "hideOnHit": true,
    },
    "position": undefined,
    "smartInvert": false,
    "style": {
      "background": undefined,
      "fill": undefined,
      "fontSize": undefined,
      "fontWeight": undefined,
    },
    "visible": true,
  },
  "legends": {
    "autoPage": true,
    "data": [Function],
    "item": {
      "background": {
        "state": {
          "selectedHover": {
            "fill": "#646A73",
            "fillOpacity": 0.05,
          },
        },
      },
      "focus": true,
      "focusIconStyle": {
        "fill": "#646A73",
        "fontWeight": 400,
        "size": 14,
      },
      "label": {
        "formatMethod": [Function],
        "style": {
          "fill": "#646A73",
          "fontSize": 12,
          "fontWeight": 400,
        },
      },
      "maxWidth": "30%",
      "shape": {
        "space": 6,
        "style": {
          "size": 8,
          "symbolType": "rectRound",
        },
      },
    },
    "maxCol": 1,
    "maxRow": 1,
    "orient": "right",
    "padding": 0,
    "position": "start",
    "type": "discrete",
    "visible": true,
  },
  "outerRadius": 0.8,
  "padding": 0,
  "pie": {
    "state": {
      "hover": {
        "outerRadius": 0.8800000000000001,
      },
    },
    "style": {
      "lineWidth": 1,
      "stroke": "#ffffff",
    },
  },
  "region": [
    {
      "clip": true,
    },
  ],
  "tooltip": {
    "dimension": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": true,
      },
    },
    "mark": {
      "content": [
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
        {
          "hasShape": true,
          "key": [Function],
          "shapeType": "rectRound",
          "value": [Function],
          "visible": true,
        },
      ],
      "title": {
        "visible": false,
      },
    },
    "visible": true,
  },
  "type": "pie",
  "valueField": "__MeaValue__",
}
`;

exports[`labelLayout 3`] = `
{
  "advancedPipeline": [
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
    [Function],
  ],
  "colorIdMap": {
    "2019-profit-profit": "2019-profit",
    "2019-sales-sales": "2019-sales",
    "2020-profit-profit": "2020-profit",
    "2020-sales-sales": "2020-sales",
    "2021-profit-profit": "2021-profit",
    "2021-sales-sales": "2021-sales",
    "2022-profit-profit": "2022-profit",
    "2022-sales-sales": "2022-sales",
    "2023-profit-profit": "2023-profit",
    "2023-sales-sales": "2023-sales",
  },
  "colorItems": [
    {
      "alias": "2019-profit",
      "id": "2019-profit-profit",
    },
    {
      "alias": "2019-sales",
      "id": "2019-sales-sales",
    },
    {
      "alias": "2020-profit",
      "id": "2020-profit-profit",
    },
    {
      "alias": "2020-sales",
      "id": "2020-sales-sales",
    },
    {
      "alias": "2021-profit",
      "id": "2021-profit-profit",
    },
    {
      "alias": "2021-sales",
      "id": "2021-sales-sales",
    },
    {
      "alias": "2022-profit",
      "id": "2022-profit-profit",
    },
    {
      "alias": "2022-sales",
      "id": "2022-sales-sales",
    },
    {
      "alias": "2023-profit",
      "id": "2023-profit-profit",
    },
    {
      "alias": "2023-sales",
      "id": "2023-sales-sales",
    },
  ],
  "hasTheme": true,
  "specPipeline": [
    [Function],
  ],
  "themeMapKeys": [
    "light",
    "dark",
  ],
}
`;
